# Matrix-Backpropagation

./: .gitignore  README.md
src/: Matrix-Backpropagation.cabal
src/app/: IndexedMatrix.hs  IndexedMatrix1.hs  IndexedMatrix2.hs  IndexedSemiring.hs  IndexedSemiringStatic.hs  MNISTExampleBackprop.hs  Main.hs  Matrix.hs
src/app/AD/: ForwardMode.hs  NCReverseMode.hs  ReverseMode.hs  ReverseModeIndexed.hs  ReverseModeStatic.hs
src/app/Backpropagation/: Backpropagation.hs  Backpropagation3x3.hs  BackpropagationFull.hs  BackpropagationIndexed.hs  BackpropagationIndexed1.hs  BackpropagationIndexed2.hs  BackpropagationIndexedIO.hs  BackpropagationIndexedStatic.hs  BackpropagationSquareMatrix.hs
src/app/Tests/: Backpropagation3x3Test.hs  BackpropagationFullTest.hs  BackpropagationIndexed1Test.hs  BackpropagationIndexed2Test.hs  BackpropagationIndexedTest.hs  BackpropagationSquareMatrixTest.hs  ForwardADTest.hs  MatrixTest.hs  ReverseModeIndexedTest.hs
src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
